<resources>
    <string name="app_name" translatable="false">AFRd</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="nav_header_title">Automatic Frame Rate daemon</string>
    <string name="nav_header_subtitle" translatable="false">zapparello@ya.ru</string>
    <string name="nav_header_desc">Choose your task</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_log">Log</string>
    <string name="nav_status">Status</string>
    <string name="ok">Ok</string>
    <string name="msg_title_critical_error">Critical error</string>
    <string name="arch_not_supported">CPU architecture \'%s\' is not supported by afrd</string>
    <string name="only_amlogic">This application supports only AmLogic SoC based
        devices, and your hardware is \'%s\'.
    </string>
    <string name="failed_copy_raw">Failed to copy resource file to %s</string>
    <string name="prefs_enable">Enable Auto Frame Rate</string>
    <string name="prefsum_enable">Turn Auto Frame Rate on or off</string>
    <string name="prefs_log_file">Log file name</string>
    <string name="prefsum_log_file">Full path to log file (/data/local/&#8230; recommended)</string>
    <string name="prefs_log_enable">Enable logging</string>
    <string name="prefsum_log_enable">Auto Frame Rate daemon will register its activity in a log
        file
    </string>
    <string name="prefs_settings_cmd">Android system settings command</string>
    <string name="prefsum_settings_cmd">The command used to query Android system settings. Set to
        empty to disable usage of Android settings.
    </string>
    <string name="prefs_settings_enable">Android setting used to enable AutoFrameRate</string>
    <string name="prefsum_settings_enable">The name of the Android setting used to enable
        AutoFrameRate, usually key_hdmi_selfadaption
    </string>
    <string name="prefs_mode_prefer_exact">Prefer exact refresh rates</string>
    <string name="prefsum_mode_prefer_exact">Prefer either 50/25Hz for 25fps movies and 60/30Hz for
        30fps movies
    </string>
    <string name="prefs_mode_use_fract">Fractional refresh rate policy</string>
    <string name="prefsum_mode_use_fract">Tell AFRd to use fractional (23.976, 29.97, 59.94Hz) or
        integer refresh rates, or both
    </string>
    <string name="prefs_mode_blacklist_rates">Blacklisted refresh rates</string>
    <string name="prefsum_mode_blacklist_rates">Enter numeric refresh rates separated by spacs, e.g.
        23.976 25
    </string>
    <string name="prefs_mode_extra">Extra supported video modes</string>
    <string name="prefsum_mode_extra">Additional video modes if your TV provides incomplete EDID
        info (such as 1080p25hz etc)
    </string>
    <string name="prefs_cs_select">Color space selection rules</string>
    <string name="prefsum_cs_select">The rules to select color space depending on video mode name
    </string>
    <string name="prefs_switch_delay_on">PLAY switch delay</string>
    <string name="prefsum_switch_delay_on">The delay in ms to wait after movie starts before
        detecting movie framerate
    </string>
    <string name="prefs_switch_delay_off">STOP switch delay</string>
    <string name="prefsum_switch_delay_off">The delay in ms to wait before restoring original
        refresh rate after movie ends. Set to 0 to tell afrd not to restore original refresh
        rate.
    </string>
    <string name="prefs_switch_delay_retry">Detect FPS retry delay</string>
    <string name="prefsum_switch_delay_retry">The delay between retries if movie frame rate cannot
        be determined
    </string>
    <string name="prefs_switch_timeout">Detect FPS timeout</string>
    <string name="prefsum_switch_timeout">The time to give up if movie framerate cannot be
        determined
    </string>
    <string name="prefs_switch_blackout">Screen off delay</string>
    <string name="prefsum_switch_blackout">The delay in ms to turn display off after movie starts.
        Set to 0 to disable this feature
    </string>

    <string name="afrd_requires_su">AFRd requires Superuser privileges to run</string>
    <string name="l_afrd_version">Auto Frame Rate daemon version</string>
    <string name="l_afrd_enabled">Daemon is enabled</string>
    <string name="l_off">Off</string>
    <string name="l_on">On</string>
    <string name="l_switched">Display refresh rate is modified to match movie</string>
    <string name="l_blackened">Display is blackened</string>
    <string name="l_current_hz">Current display refresh rate</string>
    <string name="l_original_hz">Original display refresh rate</string>
    <string name="hz">%d.%02d Hz</string>
    <string name="l_afrd_bdate">Build date</string>
    <string name="l_yes">Yes</string>
    <string name="l_no">No</string>
    <string name="no_signal">NO SIGNAL FROM AFRD</string>
    <string name="l_log_enable">Enable logging in daemon</string>
    <string name="error_opening_log">Failed to open log file; most likely it does not exist yet.
    </string>
    <string name="channel_name" translatable="false">AFRd</string>
    <string name="channel_description">Show and manage current AFRd status</string>
    <string name="notif_enabled">AFRd is enabled</string>
    <string name="notif_disabled">AFRd is disabled</string>
    <string name="notif_hz">Refresh rate: %s, original: %s</string>
    <string name="notif_stop_afrd">Disable AFR</string>
    <string name="notif_start_afrd">Enable AFR</string>
    <string name="settings_advanced">Advanced settings</string>
    <string name="mode_use_fract_auto">Auto (use best)</string>
    <string name="mode_use_fract_use">Only fractional</string>
    <string name="mode_use_fract_int">Only integer</string>
    <string name="menu_status">Status</string>
    <string name="menu_log">Log</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_desc_status">Show current Auto Frame Rate status</string>
    <string name="menu_desc_log">Display log of the running daemon</string>
    <string name="menu_desc_settings">Change the way Auto Frame Rate works</string>
    <string name="press_back_again">Press \'Back\' quickly again to quit application</string>
    <string name="prefs_reset">Reset user preferences</string>
    <string name="prefs_apply">Apply user preferences</string>
    <string name="prefs_title">AFRd settings</string>
    <string name="log_clear">Clear log file</string>
    <string name="status_title">AFRd status</string>
    <string name="msg_reset_prefs_failed">Failed to reset user preferences</string>
    <string name="msg_apply_prefs_failed">Failed to apply user preferences</string>
    <string name="prefs_group_timings">Switch timings</string>
    <string name="msg_reset_prefs_ok">AFRd settings were reset</string>
    <string name="msg_apply_prefs_ok">AFRd settings changed</string>
    <string name="log_title">Log file: %s %s</string>
    <string name="log_is_off">LOGGING IS DISABLED</string>
    <string name="notif_channel">AFRd status notification</string>
    <string name="about_history">Version history</string>
    <string name="about_authors">Program made by</string>
    <string name="about_me">Andrey Zabolotnyi / anpaza @ 4pda</string>
    <string name="about_thanks">Special thanks to</string>
    <string name="about_kigba" translatable="false">kigba @ 4pda</string>
    <string name="about_sasvlad" translatable="false">sasvlad @ 4pda</string>
    <string name="about_full_length" translatable="false">full-length @ 4pda</string>
    <string name="about_yadoff" translatable="false">yadoff @ 4pda</string>
    <string name="about_serge_kononoff" translatable="false">serge_kononoff @ 4pda</string>
    <string name="about_testing">Testing</string>
    <string name="about_testing_support">Testing &amp; Support</string>
    <string name="about_supporter">Supporter</string>
    <string name="about_license">Copying conditions</string>
    <string name="about_gpl3">
        \u0020\u0020This program is free software: you can redistribute it and/or modify it under
        the terms of the GNU General Public License as published by the Free Software Foundation,
        either version 3 of the License, or (at your option) any later version.\n\n
        \u0020\u0020This program is distributed in the hope that it will be useful, but WITHOUT
        ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
        PARTICULAR PURPOSE.
    </string>
    <string name="menu_desc_about">Authors, version history</string>
    <string name="prefs_toast">Toast refresh rate on switch</string>
    <string name="prefsum_toast">Show a small pop-up notification after display refresh rate changes
    </string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_desc_faq">Frequently Asked Questions</string>
    <string name="faq_title"><![CDATA[Frequently Asked Questions & Tips]]></string>
    <string name="afrdctl_version">Version %s-%s</string>
    <string name="prefs_vdec_blacklist">Video decoders blacklist</string>
    <string name="prefsum_vdec_blacklist">A list of video decoders for which afrd will
        now switch refresh rate
    </string>
    <string name="prefs_frhint_vdec_blacklist">Video decoders generating bad FRAME_RATE_HINT</string>
    <string name="prefsum_frhint_vdec_blacklist">A list of video decoders for which afrd will not
        use FRAME_RATE_HINT events. It will use other sources, which works a lot better
    </string>
    <string name="prefs_switch_ignore">Minimum STOP/PLAY interval to react on</string>
    <string name="prefsum_switch_ignore">Ignore PLAY events happening in less than this number of
        milliseconds from previous STOP switch (helps to ignore video rewinding)
    </string>
    <string name="notif_notrunning">Daemon is not running</string>
    <string name="prefsum_switch_hdmi">The delay before reloading display capabilities after a HDMI
        hotplug event. Set to 0 to disable
    </string>
    <string name="prefs_switch_hdmi">HDMI capabilities reloading delay</string>
    <string name="about_showlic">See full text</string>
    <string name="about_hidelic">Hide full text</string>
    <string name="settings_title">Settings</string>
    <string name="failed_detect_ostype">Failed to identify the Operating System!\n
        [kernel %s, hardware %s, model %s]
    </string>
</resources>
