<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/prefs_title">

    <SwitchPreference android:defaultValue="1" android:key="enable" android:summary="@string/prefsum_enable"
                      android:title="@string/prefs_enable"/>
    <SwitchPreference android:defaultValue="0" android:key="log_enable"
                      android:summary="@string/prefsum_log_enable"
                      android:title="@string/prefs_log_enable"/>
    <SwitchPreference android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:defaultValue="1" android:key="toast_hz"
                      android:summary="@string/prefsum_toast" android:title="@string/prefs_toast"/>
    <SwitchPreference android:defaultValue="0" android:key="mode_prefer_exact"
                      android:summary="@string/prefsum_mode_prefer_exact"
                      android:title="@string/prefs_mode_prefer_exact"/>
    <ListPreference android:defaultValue="0" android:entries="@array/mode_use_fract"
                    android:entryValues="@array/mode_use_fract_value" android:key="mode_use_fract"
                    android:summary="@string/prefsum_mode_use_fract"
                    android:title="@string/prefs_mode_use_fract"/>
    <PreferenceScreen android:fragment="ru.cobra.zap.afrd.gui.SettingsFragment"
                      android:key="timings" android:title="@string/prefs_group_timings">
        <EditTextPreference android:defaultValue="300" android:key="switch_delay_on"
                            android:maxLength="5" android:numeric="integer" android:selectAllOnFocus="true"
                            android:singleLine="true" android:summary="@string/prefsum_switch_delay_on"
                            android:title="@string/prefs_switch_delay_on"/>
        <EditTextPreference android:defaultValue="10000" android:key="switch_delay_off"
                            android:maxLength="5" android:numeric="integer" android:selectAllOnFocus="true"
                            android:singleLine="true" android:summary="@string/prefsum_switch_delay_off"
                            android:title="@string/prefs_switch_delay_off"/>
        <EditTextPreference android:defaultValue="100" android:key="switch_delay_retry"
                            android:maxLength="5" android:numeric="integer" android:selectAllOnFocus="true"
                            android:singleLine="true" android:summary="@string/prefsum_switch_delay_retry"
                            android:title="@string/prefs_switch_delay_retry"/>
        <EditTextPreference android:defaultValue="3000" android:key="switch_timeout"
                            android:maxLength="5" android:numeric="integer" android:selectAllOnFocus="true"
                            android:singleLine="true" android:summary="@string/prefsum_switch_timeout"
                            android:title="@string/prefs_switch_timeout"/>
        <EditTextPreference android:defaultValue="150" android:key="switch_blackout"
                            android:maxLength="5" android:numeric="integer" android:selectAllOnFocus="true"
                            android:singleLine="true" android:summary="@string/prefsum_switch_blackout"
                            android:title="@string/prefs_switch_blackout"/>
        <EditTextPreference android:defaultValue="200" android:key="switch_ignore"
                            android:maxLength="5" android:numeric="integer" android:selectAllOnFocus="true"
                            android:singleLine="true" android:summary="@string/prefsum_switch_ignore"
                            android:title="@string/prefs_switch_ignore"/>
        <EditTextPreference android:defaultValue="2000" android:key="switch_hdmi"
                            android:maxLength="5" android:numeric="integer" android:selectAllOnFocus="true"
                            android:singleLine="true" android:summary="@string/prefsum_switch_hdmi"
                            android:title="@string/prefs_switch_hdmi"/>
    </PreferenceScreen>
    <PreferenceScreen android:fragment="ru.cobra.zap.afrd.gui.SettingsFragment"
                      android:key="advanced" android:title="@string/settings_advanced">
        <EditTextPreference android:key="mode_blacklist_rates" android:selectAllOnFocus="false"
                            android:singleLine="true"
                            android:summary="@string/prefsum_mode_blacklist_rates"
                            android:title="@string/prefs_mode_blacklist_rates"/>
        <EditTextPreference android:key="mode_extra" android:selectAllOnFocus="false"
                            android:singleLine="true" android:summary="@string/prefsum_mode_extra"
                            android:title="@string/prefs_mode_extra"/>
        <EditTextPreference android:defaultValue="2160p[4-9].*=420 .*=444" android:key="cs_select"
                            android:selectAllOnFocus="false" android:singleLine="true"
                            android:summary="@string/prefsum_cs_select"
                            android:title="@string/prefs_cs_select"/>
        <EditTextPreference android:defaultValue="/data/local/afrd.log" android:key="log_file"
                            android:selectAllOnFocus="false" android:singleLine="true"
                            android:summary="@string/prefsum_log_file"
                            android:title="@string/prefs_log_file"/>
        <EditTextPreference android:key="vdec_blacklist"
                            android:selectAllOnFocus="false" android:singleLine="true"
                            android:summary="@string/prefsum_vdec_blacklist"
                            android:title="@string/prefs_vdec_blacklist"/>
        <EditTextPreference android:key="frhint_vdec_blacklist"
                            android:selectAllOnFocus="false" android:singleLine="true"
                            android:summary="@string/prefsum_frhint_vdec_blacklist"
                            android:title="@string/prefs_frhint_vdec_blacklist"/>
    </PreferenceScreen>
</PreferenceScreen>