<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/drawer_layout" android:layout_width="match_parent"
              android:layout_height="match_parent" android:fitsSystemWindows="true"
              android:orientation="horizontal" android:showDividers="middle">
    <LinearLayout android:id="@+id/menu_layout" android:layout_width="300dp"
                  android:layout_height="match_parent" android:background="@color/colorMenuBackground"
                  android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:background="@drawable/side_nav_bar" android:orientation="vertical">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <ImageView android:id="@+id/imageView" android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:contentDescription="@string/nav_header_desc"
                           android:paddingTop="@dimen/nav_header_vertical_spacing"
                           android:src="@drawable/ic_afrd"/>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="match_parent" android:orientation="vertical"
                              android:textAlignment="center">
                    <TextView android:layout_width="match_parent"
                              android:layout_height="wrap_content" android:layout_weight="1"
                              android:gravity="bottom"
                              android:paddingTop="@dimen/nav_header_vertical_spacing" android:text="@string/nav_header_title"
                              android:textAlignment="center"/>
                    <TextView android:layout_width="match_parent"
                              android:layout_height="wrap_content" android:layout_weight="1"
                              android:gravity="top" android:text="@string/nav_header_subtitle"
                              android:textAlignment="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ListView android:id="@+id/menu" android:layout_width="match_parent"
                  android:layout_height="match_parent" android:entries="@array/menu_main"/>

    </LinearLayout>
    <FrameLayout android:id="@+id/content_holder" android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
</LinearLayout>
